--- a/src/components/listComponents/style/NotificationStyle.css
+++ b/src/components/listComponents/style/NotificationStyle.css
@@ -18,3 +18,39 @@
   transform: translate(-50%, -50%);
   margin-top: 20px;
 }
+
+.notificationContainer {
+  width: auto;
+  overflow-y: hidden;
+  overflow-x: auto;
+  padding: 10px;
+  background: #F0F0F0;
+  white-space: nowrap;
+}
+
+.notificationContainer > .notificationCard {
+  height: 100%;
+  margin: 0 10px 0 0;
+  padding: 0;
+  display: inline-block;
+  text-align: center;
+  color: #FFF;
+  line-height: 50px;
+}
+
+.notificationContainer::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
+
+.notificationContainer::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: #F5F5F5;
+}
+
+.notificationContainer::-webkit-scrollbar-thumb
+{
+	background-color: #000000;
+}
